# Grab-IT-autonomy-stack

./: .gitignore  Layout.fzz  README.md
CAD/Robot_arm_model/: AXIS_1.FCStd  AXIS_2.20260203-024523.FCBak  AXIS_2.FCStd  AXIS_3.FCStd  AXIS_4.FCStd  AXIS_5.FCStd  Base_plate.20260203-022248.FCBak  Base_plate.FCStd
grab_it_gz/: CMakeLists.txt  README.md  package.xml
grab_it_gz/config/: controllers.yaml
grab_it_gz/launch/: launch_gz_sim.launch.py
grab_it_gz/model/meshes/: AXIS_1.dae  AXIS_2.dae  AXIS_3.dae  AXIS_4.dae  AXIS_5.dae  Base_plate.dae
grab_it_gz/model/worlds/: empty_world.sdf
grab_it_gz/model/xacro/: grab_it.xacro  materials.xacro  robot.urdf.xacro
nano/: README.md
nano/i2c_portscanner/src/: portscan.cpp
nano/nano_com_test/: platformio.ini
nano/nano_com_test/src/: nano_com_test.cpp
nano/read_single_encoder/: platofrmio.ini
